# sentinel-code

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: config.py  main.py
backend/models/: scan.py
backend/routers/: scan.py  threatmap.py
backend/services/: gemini_scanner.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/backend_data/: sample_threats.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/threatmap/: page.tsx
frontend/src/components/: CodeInput.tsx  ScanProgress.tsx  ThreatMap.tsx  VulnerabilityCard.tsx
frontend/src/lib/: api.ts  types.ts
pipelines/: vulnerability_scan.pipe
tests/: test_api.py  test_gemini_scanner.py  test_integration.py  test_models.py
